[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://apps/supply_chain_modeling/ui/node_details_panel.gd" id="1"]

[node name="NodeDetailsPanel" type="PanelContainer"]
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Node Details"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="LabelID" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "ID:"

[node name="LabelIDValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="LabelDomain" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Domain:"

[node name="LabelDomainValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fluid"

[node name="LabelPotential" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Potential:"

[node name="LabelPotentialValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0.0000"

[node name="LabelFlow" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Accumulation:"

[node name="LabelFlowValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0.0000"

[node name="LabelResource" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resource:"

[node name="LabelResourceValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "None"

[node name="LabelCapacitance" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Capacitance:"

[node name="LabelCapacitanceValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0.00"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
